--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "client:dev": "cd ./client && npm run dev",
-    "server:dev": "cd ../server && npm run dev",
+    "server:dev": "cd ./server && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
